test/arrays/shapes/error-if-non-DR-3.good
error-if-non-DR-3.chpl:4: error: for/forall/promoted expressions are not implemented when the elements are or contain non-DefaultRectangular domains or arrays
