test/arrays/shapes/error-if-non-DR-3.chpl

var DOM: domain(int);

var PROMO = for idx in 1..3 do DOM;
